--- a/02-in-document-styles.html
+++ b/02-in-document-styles.html
@@ -13,6 +13,20 @@
             display: inline-block;
         }
     </style>
+
+<style>
+    .yellow-square { 
+        width: 200px;
+        height: 200px;
+        color: rgb(32, 31, 31);
+        padding: 20px;
+        margin: 20px;
+        font-size: 12px;
+        background-color: rgba(230, 247, 5, 0.938);
+        display: inline-block;
+    }
+</style>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,6 +35,6 @@
 </head>
     <body>
         <div class="red-square">Square #1</div>
-        <div class="red-square" style="background-color: #F0F">Square #2</div>
+        <div class="yellow-square">Square #2</div>
     </body>
 </html>
