--- a/04-applying-styles.html
+++ b/04-applying-styles.html
@@ -11,5 +11,6 @@
 </head>
 <body>
     <a href="https://google.com" id="Blue-minisquare" class="red-square">google
+        <a href="https://google.com" id="Blue-minisquare" class="red-square"><a>google
 </body>
 </html>
