--- a/05-inheritance.html
+++ b/05-inheritance.html
@@ -5,7 +5,10 @@
     </head>
     <body>
         <div class="cascading-parent">
-        <div class="cascading-child">Square Child</div>
+        <div class="cascading-child">Square Child
+        <div class="cascading-child2">Gele text inherited from child  
+        <div class="cascading-child3">Wat gebeurd er nu 
+        </div>
         </div>
     </body>
 </html>
