--- a/11-css-menu.html
+++ b/11-css-menu.html
@@ -10,14 +10,15 @@
 </head>
 <body>
 
-    <div class="menu">
-        <div class="menutrigger">
+    <div class="menu">menu
+        <div class="menu-trigger">
             <div class="dropdown">
                 <div>
                     Menu goes here!
                 </div>
-            </div>    
+            </div>
         </div>
     </div>
+
 </body>
 </html>
