--- a/13-exercise.html
+++ b/13-exercise.html
@@ -2,11 +2,26 @@
 <html>
     <head>
         <link rel="stylesheet" href="css/main-style-exercise-13.css"/>
-        <link rel="stylesheet" href="css/menu-exercise 13.css">
+        <link rel="stylesheet" href="css/menu-exercise-13.css">
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>CSS Menu</title>
+    
     </head>
     <body>
         <header class="navigation">
-            <div>Logo</div>
+            <div>logo</div>
+            <div>menu</div>
+            <div class="menu">
+                <div class="menu-trigger">
+                    <div class="dropdown">
+                        <div>
+                            This is the menu!
+                        </div>
+                    </div>
+                </div>
+            </div>
             
         </header>
 
