--- a/13-exercise.html
+++ b/13-exercise.html
@@ -2,7 +2,6 @@
 <html>
     <head>
         <link rel="stylesheet" href="css/main-style-exercise-13.css"/>
-        <link rel="stylesheet" href="css/menu-exercise-13.css">
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,17 +11,13 @@
     <body>
         <header class="navigation">
             <div>logo</div>
-            <div>menu</div>
             <div class="menu">
                 <div class="menu-trigger">
                     <div class="dropdown">
-                        <div>
-                            This is the menu!
+                        <div>Menu</div>
                         </div>
                     </div>
-                </div>
-            </div>
-            
+                </div> 
         </header>
 
         <section class="content">
